k8s/example/hello.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: hello
  namespace: hello
  labels:
    app: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
        version: v0.0.1
    spec:
      containers:
      - name: hello
        image: quay.io/pierknueppel/hello-nodejs
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 50Mi
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: hello
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8001
  selector:
    #app: hello
    prometheus: prometheus
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello
  namespace: hello
  annotations:  
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - hello.fuehrer.me
    secretName: letsencrypt-staging
  rules:
  - host: hello.fuehrer.me
    http:
      paths:
      - backend:
          serviceName: hello
          servicePort: http
